fix maintanability issue on previous code change